# db/migrate/20230827154023_create_graphic_resources.rb
@@ -1,0 +1,9 @@
+class CreateGraphicResources < ActiveRecord::Migration[7.0]
+  def change
+    create_table :graphic_resources do |t|
+      t.integer :resource_type, default: 0
+
+      t.timestamps
+    end
+  end
+end
